2024-05-15 Massimo Manghi <mxmanghi@apache.org>
	* rivet/packages/dio/tdbc.tcl,dio.tcl: add early support for tdbc database interface

2024-05-11 Massimo Manghi <mxmanghi@apache.org>
	* rivet/packages/aida/aida.tcl,sql.tcl: experimental files moved from packages/dio
	* rivet/packages/rivet_ncgi/rivet_ncgi.tcl: fully qualifying rivet commands
	* Makefile.am: Remove svn Id: 

2024-04-12 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/mod_rivet_common.c: Determining the server_rec also
	for ServerInitScripts.
	* doc/rivet.xml: update version number

2024-02-18 Massimo Manghi <mxmanghi@apache.org>
	* doc/xml/commands.xml: fixed misspelled command ::rivet::thread_id
	* VERSION: new version 3.2.5

2024-02-04 Massimo Manghi <mxmanghi@apache.org>
	* doc/rivet.xml: new version 3.2.4
	* src/mod_rivet_ng/rivet_prefork_mpm.c:
	* src/mod_rivet_ng/rivet_worker_mpm.c:
	* src/mod_rivet_ng/worker_prefork_common.c: now calling the
	new function Rivet_RunChildScripts to execute
	both rivet_child_init_script and rivet_child_exit_script

2024-01-05 Massimo Manghi <mxmanghi@apache.org>
	* VERSION: bumped version number as 3.2.4

2023-11-12 Massimo Manghi <mxmanghi@apache.org>
	* .appveyor.yml: Attemping to fix Visual Studio generator version

2023-10-28 Massimo Manghi <mxmanghi@apache.org>
	* .appveyor.yml: Fix Windows compiler download URL

2023-10-03 Massimo Manghi <mxmanghi@apache.org>
	* tests/rivet.tcl: fixed regression bug in the controlling environment variables

2023-09-12 Massimo Manghi <mxmanghi@apache.org>
	* rivet/packages/formbroker/formbroker.tcl: expanded comments
	* doc/xml/formbroker.xml: documenting variable type validators error codes

2023-06-14 Massimo Manghi <mxmanghi@apache.org>
	* tests/channel.test: indenting code for improved readability
	* src/mod_rivet_ng/mod_rivet.c,mod_rivet_generator.c: Removed unused code that
	has been commented out long ago
	* rivet/rivet-tcl/parray.tcl: ::rivet::parray now accepting alternative way to