@@ -35,6 +35,7 @@ namespace eval DIO {
                 return -code error "No Sqlite Tcl package available"
             }
             eval configure $args
+            $this set_field_formatter ::DIO::formatters::Sqlite
         }
 
         destructor {
@@ -104,63 +105,11 @@ namespace eval DIO {
         # quote - given a string, return the same string with any single
         #  quote characters preceded by a backslash
         #
-        method quote {string} {
-            regsub -all {'} $string {''} string
-            return $string
+        method quote {a_string} {
+            regsub -all {'} $a_string {''} a_string
+            return $a_string
         }
 
-        method buil_special_field {table_name field_name val {convert_to {}}} {
-            switch [$this select_special_field $table_name $field_name] {
-                DATE {
-                    set secs [clock scan $val]
-                    set my_val [clock format $secs -format {%Y-%m-%d}]
-                    return "date('$my_val')"
-                }
-                DATETIME {
-                    set secs [clock scan $val]
-                    set my_val [clock format $secs -format {%Y-%m-%d %T}]
-                    return "datetime('$my_val')"
-                }
-                NOW {
-                    switch $convert_to {
-
-                    # we try to be coherent with the original purpose of this method whose
-                    # goal is to provide to the programmer a uniform way to handle timestamps. 
-                    # E.g.: Package session expects this case to return a timestamp in seconds
-                    # so that differences with timestamps returned by [clock seconds]
-                    # can be done and session expirations are computed consistently.
-                    # (Bug #53703)
-
-                        SECS {
-                            if {[::string compare $val "now"] == 0} {
-#                                   set secs    [clock seconds]
-#                                   set my_val  [clock format $secs -format "%Y%m%d%H%M%S"]
-                                return      [clock seconds]
-                            } else {
-
-                                # the numbers of seconds must be returned as 'utc' to
-                                # be compared with values returned by [clock seconds]
-
-                                return  "strftime('%s',$field_name,'utc')"
-                            }
-                        }
-                        default {
-                            if {[::string compare $val, "now"] == 0} {
-                                set secs [clock seconds]
-                            } else {
-                                set secs [clock scan $val]
-                            }
-                            set my_val [clock format $secs -format {%Y-%m-%d %T}]
-                            return "datetime('$my_val')"
-                        }
-                    }
-                }
-                default {
-                    # no special code for that type!!
-                    return "'[quote $val]'"
-                }
-            }
-        }
     }
 
     catch { ::itcl::delete class SqliteResult }
